--- a/app/assets/stylesheets/_functions.scss
+++ b/app/assets/stylesheets/_functions.scss
@@ -1,7 +1,7 @@
- :root {
+:root {
   --spacing-none: 0;
-  --spacing-extra-small: .25rem;
-  --spacing-small: .5rem;
+  --spacing-extra-small: 0.25rem;
+  --spacing-small: 0.5rem;
   --spacing-medium: 1rem;
   --spacing-large: 2rem;
   --spacing-extra-large: 4rem;
@@ -10,50 +10,130 @@
 }
 
 /* Functional Styles: http://tachyons.io/docs/ */
-.pa0 { padding: var(--spacing-none); }
-.pa1 { padding: var(--spacing-extra-small); }
-.pa2 { padding: var(--spacing-small); }
-.pa3 { padding: var(--spacing-medium); }
-.pa4 { padding: var(--spacing-large); }
-.pa5 { padding: var(--spacing-extra-large); }
-.pa6 { padding: var(--spacing-extra-extra-large); }
-.pa7 { padding: var(--spacing-extra-extra-extra-large); }
+.pa0 {
+  padding: var(--spacing-none);
+}
+.pa1 {
+  padding: var(--spacing-extra-small);
+}
+.pa2 {
+  padding: var(--spacing-small);
+}
+.pa3 {
+  padding: var(--spacing-medium);
+}
+.pa4 {
+  padding: var(--spacing-large);
+}
+.pa5 {
+  padding: var(--spacing-extra-large);
+}
+.pa6 {
+  padding: var(--spacing-extra-extra-large);
+}
+.pa7 {
+  padding: var(--spacing-extra-extra-extra-large);
+}
 
-.pl0 { padding-left: var(--spacing-none); }
-.pl1 { padding-left: var(--spacing-extra-small); }
-.pl2 { padding-left: var(--spacing-small); }
-.pl3 { padding-left: var(--spacing-medium); }
-.pl4 { padding-left: var(--spacing-large); }
-.pl5 { padding-left: var(--spacing-extra-large); }
-.pl6 { padding-left: var(--spacing-extra-extra-large); }
-.pl7 { padding-left: var(--spacing-extra-extra-extra-large); }
+.pl0 {
+  padding-left: var(--spacing-none);
+}
+.pl1 {
+  padding-left: var(--spacing-extra-small);
+}
+.pl2 {
+  padding-left: var(--spacing-small);
+}
+.pl3 {
+  padding-left: var(--spacing-medium);
+}
+.pl4 {
+  padding-left: var(--spacing-large);
+}
+.pl5 {
+  padding-left: var(--spacing-extra-large);
+}
+.pl6 {
+  padding-left: var(--spacing-extra-extra-large);
+}
+.pl7 {
+  padding-left: var(--spacing-extra-extra-extra-large);
+}
 
-.pr0 { padding-right: var(--spacing-none); }
-.pr1 { padding-right: var(--spacing-extra-small); }
-.pr2 { padding-right: var(--spacing-small); }
-.pr3 { padding-right: var(--spacing-medium); }
-.pr4 { padding-right: var(--spacing-large); }
-.pr5 { padding-right: var(--spacing-extra-large); }
-.pr6 { padding-right: var(--spacing-extra-extra-large); }
-.pr7 { padding-right: var(--spacing-extra-extra-extra-large); }
+.pr0 {
+  padding-right: var(--spacing-none);
+}
+.pr1 {
+  padding-right: var(--spacing-extra-small);
+}
+.pr2 {
+  padding-right: var(--spacing-small);
+}
+.pr3 {
+  padding-right: var(--spacing-medium);
+}
+.pr4 {
+  padding-right: var(--spacing-large);
+}
+.pr5 {
+  padding-right: var(--spacing-extra-large);
+}
+.pr6 {
+  padding-right: var(--spacing-extra-extra-large);
+}
+.pr7 {
+  padding-right: var(--spacing-extra-extra-extra-large);
+}
 
-.pb0 { padding-bottom: var(--spacing-none); }
-.pb1 { padding-bottom: var(--spacing-extra-small); }
-.pb2 { padding-bottom: var(--spacing-small); }
-.pb3 { padding-bottom: var(--spacing-medium); }
-.pb4 { padding-bottom: var(--spacing-large); }
-.pb5 { padding-bottom: var(--spacing-extra-large); }
-.pb6 { padding-bottom: var(--spacing-extra-extra-large); }
-.pb7 { padding-bottom: var(--spacing-extra-extra-extra-large); }
+.pb0 {
+  padding-bottom: var(--spacing-none);
+}
+.pb1 {
+  padding-bottom: var(--spacing-extra-small);
+}
+.pb2 {
+  padding-bottom: var(--spacing-small);
+}
+.pb3 {
+  padding-bottom: var(--spacing-medium);
+}
+.pb4 {
+  padding-bottom: var(--spacing-large);
+}
+.pb5 {
+  padding-bottom: var(--spacing-extra-large);
+}
+.pb6 {
+  padding-bottom: var(--spacing-extra-extra-large);
+}
+.pb7 {
+  padding-bottom: var(--spacing-extra-extra-extra-large);
+}
 
-.pt0 { padding-top: var(--spacing-none); }
-.pt1 { padding-top: var(--spacing-extra-small); }
-.pt2 { padding-top: var(--spacing-small); }
-.pt3 { padding-top: var(--spacing-medium); }
-.pt4 { padding-top: var(--spacing-large); }
-.pt5 { padding-top: var(--spacing-extra-large); }
-.pt6 { padding-top: var(--spacing-extra-extra-large); }
-.pt7 { padding-top: var(--spacing-extra-extra-extra-large); }
+.pt0 {
+  padding-top: var(--spacing-none);
+}
+.pt1 {
+  padding-top: var(--spacing-extra-small);
+}
+.pt2 {
+  padding-top: var(--spacing-small);
+}
+.pt3 {
+  padding-top: var(--spacing-medium);
+}
+.pt4 {
+  padding-top: var(--spacing-large);
+}
+.pt5 {
+  padding-top: var(--spacing-extra-large);
+}
+.pt6 {
+  padding-top: var(--spacing-extra-extra-large);
+}
+.pt7 {
+  padding-top: var(--spacing-extra-extra-extra-large);
+}
 
 .pv0 {
   padding-top: var(--spacing-none);
@@ -128,152 +208,294 @@
   padding-left: var(--spacing-extra-extra-extra-large);
   padding-right: var(--spacing-extra-extra-extra-large);
 }
-.ma0  {  margin: var(--spacing-none); }
-.ma1 {  margin: var(--spacing-extra-small); }
-.ma2  {  margin: var(--spacing-small); }
-.ma3  {  margin: var(--spacing-medium); }
-.ma4  {  margin: var(--spacing-large); }
-.ma5  {  margin: var(--spacing-extra-large); }
-.ma6 {  margin: var(--spacing-extra-extra-large); }
-.ma7 { margin: var(--spacing-extra-extra-extra-large); }
+.ma0 {
+  margin: var(--spacing-none);
+}
+.ma1 {
+  margin: var(--spacing-extra-small);
+}
+.ma2 {
+  margin: var(--spacing-small);
+}
+.ma3 {
+  margin: var(--spacing-medium);
+}
+.ma4 {
+  margin: var(--spacing-large);
+}
+.ma5 {
+  margin: var(--spacing-extra-large);
+}
+.ma6 {
+  margin: var(--spacing-extra-extra-large);
+}
+.ma7 {
+  margin: var(--spacing-extra-extra-extra-large);
+}
 
-.ml0  {  margin-left: var(--spacing-none); }
-.ml1 {  margin-left: var(--spacing-extra-small); }
-.ml2  {  margin-left: var(--spacing-small); }
-.ml3  {  margin-left: var(--spacing-medium); }
-.ml4  {  margin-left: var(--spacing-large); }
-.ml5  {  margin-left: var(--spacing-extra-large); }
-.ml6 {  margin-left: var(--spacing-extra-extra-large); }
-.ml7 { margin-left: var(--spacing-extra-extra-extra-large); }
+.ml0 {
+  margin-left: var(--spacing-none);
+}
+.ml1 {
+  margin-left: var(--spacing-extra-small);
+}
+.ml2 {
+  margin-left: var(--spacing-small);
+}
+.ml3 {
+  margin-left: var(--spacing-medium);
+}
+.ml4 {
+  margin-left: var(--spacing-large);
+}
+.ml5 {
+  margin-left: var(--spacing-extra-large);
+}
+.ml6 {
+  margin-left: var(--spacing-extra-extra-large);
+}
+.ml7 {
+  margin-left: var(--spacing-extra-extra-extra-large);
+}
 
-.mr0  {  margin-right: var(--spacing-none); }
-.mr1 {  margin-right: var(--spacing-extra-small); }
-.mr2  {  margin-right: var(--spacing-small); }
-.mr3  {  margin-right: var(--spacing-medium); }
-.mr4  {  margin-right: var(--spacing-large); }
-.mr5  {  margin-right: var(--spacing-extra-large); }
-.mr6 {  margin-right: var(--spacing-extra-extra-large); }
-.mr7 { margin-right: var(--spacing-extra-extra-extra-large); }
+.mr0 {
+  margin-right: var(--spacing-none);
+}
+.mr1 {
+  margin-right: var(--spacing-extra-small);
+}
+.mr2 {
+  margin-right: var(--spacing-small);
+}
+.mr3 {
+  margin-right: var(--spacing-medium);
+}
+.mr4 {
+  margin-right: var(--spacing-large);
+}
+.mr5 {
+  margin-right: var(--spacing-extra-large);
+}
+.mr6 {
+  margin-right: var(--spacing-extra-extra-large);
+}
+.mr7 {
+  margin-right: var(--spacing-extra-extra-extra-large);
+}
 
-.mb0  {  margin-bottom: var(--spacing-none); }
-.mb1 {  margin-bottom: var(--spacing-extra-small); }
-.mb2  {  margin-bottom: var(--spacing-small); }
-.mb3  {  margin-bottom: var(--spacing-medium); }
-.mb4  {  margin-bottom: var(--spacing-large); }
-.mb5  {  margin-bottom: var(--spacing-extra-large); }
-.mb6 {  margin-bottom: var(--spacing-extra-extra-large); }
-.mb7 { margin-bottom: var(--spacing-extra-extra-extra-large); }
+.mb0 {
+  margin-bottom: var(--spacing-none);
+}
+.mb1 {
+  margin-bottom: var(--spacing-extra-small);
+}
+.mb2 {
+  margin-bottom: var(--spacing-small);
+}
+.mb3 {
+  margin-bottom: var(--spacing-medium);
+}
+.mb4 {
+  margin-bottom: var(--spacing-large);
+}
+.mb5 {
+  margin-bottom: var(--spacing-extra-large);
+}
+.mb6 {
+  margin-bottom: var(--spacing-extra-extra-large);
+}
+.mb7 {
+  margin-bottom: var(--spacing-extra-extra-extra-large);
+}
 
-.mt0  {  margin-top: var(--spacing-none); }
-.mt1 {  margin-top: var(--spacing-extra-small); }
-.mt2  {  margin-top: var(--spacing-small); }
-.mt3  {  margin-top: var(--spacing-medium); }
-.mt4  {  margin-top: var(--spacing-large); }
-.mt5  {  margin-top: var(--spacing-extra-large); }
-.mt6 {  margin-top: var(--spacing-extra-extra-large); }
-.mt7 { margin-top: var(--spacing-extra-extra-extra-large); }
+.mt0 {
+  margin-top: var(--spacing-none);
+}
+.mt1 {
+  margin-top: var(--spacing-extra-small);
+}
+.mt2 {
+  margin-top: var(--spacing-small);
+}
+.mt3 {
+  margin-top: var(--spacing-medium);
+}
+.mt4 {
+  margin-top: var(--spacing-large);
+}
+.mt5 {
+  margin-top: var(--spacing-extra-large);
+}
+.mt6 {
+  margin-top: var(--spacing-extra-extra-large);
+}
+.mt7 {
+  margin-top: var(--spacing-extra-extra-extra-large);
+}
 
-.mv0   {
+.mv0 {
   margin-top: var(--spacing-none);
   margin-bottom: var(--spacing-none);
 }
-.mv1  {
+.mv1 {
   margin-top: var(--spacing-extra-small);
   margin-bottom: var(--spacing-extra-small);
 }
-.mv2   {
+.mv2 {
   margin-top: var(--spacing-small);
   margin-bottom: var(--spacing-small);
 }
-.mv3   {
+.mv3 {
   margin-top: var(--spacing-medium);
   margin-bottom: var(--spacing-medium);
 }
-.mv4   {
+.mv4 {
   margin-top: var(--spacing-large);
   margin-bottom: var(--spacing-large);
 }
-.mv5   {
+.mv5 {
   margin-top: var(--spacing-extra-large);
   margin-bottom: var(--spacing-extra-large);
 }
-.mv6  {
+.mv6 {
   margin-top: var(--spacing-extra-extra-large);
   margin-bottom: var(--spacing-extra-extra-large);
 }
-.mv7  {
+.mv7 {
   margin-top: var(--spacing-extra-extra-extra-large);
   margin-bottom: var(--spacing-extra-extra-extra-large);
 }
 
-.mh0   {
+.mh0 {
   margin-left: var(--spacing-none);
   margin-right: var(--spacing-none);
 }
-.mh1   {
+.mh1 {
   margin-left: var(--spacing-extra-small);
   margin-right: var(--spacing-extra-small);
 }
-.mh2   {
+.mh2 {
   margin-left: var(--spacing-small);
   margin-right: var(--spacing-small);
 }
-.mh3   {
+.mh3 {
   margin-left: var(--spacing-medium);
   margin-right: var(--spacing-medium);
 }
-.mh4   {
+.mh4 {
   margin-left: var(--spacing-large);
   margin-right: var(--spacing-large);
 }
-.mh5   {
+.mh5 {
   margin-left: var(--spacing-extra-large);
   margin-right: var(--spacing-extra-large);
 }
-.mh6  {
+.mh6 {
   margin-left: var(--spacing-extra-extra-large);
   margin-right: var(--spacing-extra-extra-large);
 }
-.mh7  {
+.mh7 {
   margin-left: var(--spacing-extra-extra-extra-large);
   margin-right: var(--spacing-extra-extra-extra-large);
 }
 
 /* Color */
-.bg-gray { background-color: #f8f8f8; }
+.bg-gray {
+  background-color: #f8f8f8;
+}
 
 /* Font Size */
-.f1 { font-size: 3rem; }
-.f2 { font-size: 2.25rem; }
-.f3 { font-size: 1.5rem; }
-.f4 { font-size: 1.25rem; }
-.f5 { font-size: 1rem; }
-.f6 { font-size: .875rem; }
-.f7 { font-size: .75rem; }
+.f1 {
+  font-size: 3rem;
+}
+.f2 {
+  font-size: 2.25rem;
+}
+.f3 {
+  font-size: 1.5rem;
+}
+.f4 {
+  font-size: 1.25rem;
+}
+.f5 {
+  font-size: 1rem;
+}
+.f6 {
+  font-size: 0.875rem;
+}
+.f7 {
+  font-size: 0.75rem;
+}
 
 /* Font Weight */
-.fw4 { font-weight: 400; }
-.fw5 { font-weight: 500; }
-.fw6 { font-weight: 600; }
-.fw7 { font-weight: 600; }
+.fw4 {
+  font-weight: 400;
+}
+.fw5 {
+  font-weight: 500;
+}
+.fw6 {
+  font-weight: 600;
+}
+.fw7 {
+  font-weight: 600;
+}
+
+.text-sans-serif {
+  font-family: sans-serif;
+}
+.text-serif {
+  font-family: serif;
+}
+.text-uppercase {
+  text-transform: uppercase;
+}
 
 /* Border */
-.border-light { border: 1px solid #dddddd; }
-.border { border: 1px solid #dedede; }
-.border-bottom { border-bottom: 1px solid #dddddd; }
-.border-top { border-top: 1px solid #dddddd; }
-.border-right { border-right: 1px solid #dddddd; }
+.border-light {
+  border: 1px solid #dddddd;
+}
+.border {
+  border: 1px solid #dedede;
+}
 
-.border-radius-3 { border-radius: 3px; }
+.border-bottom {
+  border-bottom: 1px solid #dddddd;
+  &:last-of-type {
+    border-bottom: 0;
+  }
+}
 
-.justify-center { justify-content: center; }
-.align-items-center { align-items: center; }
+.border-top {
+  border-top: 1px solid #dddddd;
+}
+.border-right {
+  border-right: 1px solid #dddddd;
+}
+
+.border-radius-3 {
+  border-radius: 3px;
+}
+
+.justify-center {
+  justify-content: center;
+}
+.align-items-center {
+  align-items: center;
+}
 
 /* Display */
-.inline-block { display: inline-block; }
-.block { display: block; }
+.inline-block {
+  display: inline-block;
+}
+.block {
+  display: block;
+}
 
 /* Background */
-.bg-white { background-color: white; }
-.bg-light { background-color: #F1F1F1; }
-
+.bg-white {
+  background-color: white;
+}
+.bg-light {
+  background-color: whitesmoke;
+}
