--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -94,6 +94,6 @@
 
 <hr />
 
-<%# render 'payment' %>
+<%= render "payment" %>
 <%= f.button :submit, class: "button is-primary is-large is-rounded mv4" %>
 <% end %>
