--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,12 @@
 <head>
   <title><%= Rails.configuration.application_name %></title>
   <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' %>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', "https://js.stripe.com/v2/", "https://js.stripe.com/v3/", 'data-turbolinks-track': 'reload' %>
-  <% tag :meta, name: "stripe-public-key", content: Figaro.env.stripe_publishable_key %>
+  <%= tag :meta, name: 'stripe-public-key', content: Figaro.env.stripe_publishable_key %>
 </head>
 
 <body class="<%= yield (:body_class) %>">
@@ -19,7 +18,6 @@
     <p class="notice"><%= notice %></p>
   </div>
   <% end %>
-
   <% if flash[:alert] %>
   <div class="notification is-danger global-notification">
     <p class="alert"><%= alert %></p>
@@ -69,11 +67,8 @@
     </div>
   </nav>
 
-  <section class="section">
-    <div class="container">
-      <%= yield %>
-    </div>
-  </section>
+
+  <%= yield %>
 
   <footer class="footer">
     <div class="container">
